:bulb: :memo: composer doc

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
       "email": "shaktihk009@gmail.com"
     }
   ],
+  "support": {
+    "docs": "https://speedworks.github.io/speedy"
+  },
   "config": {
     "vendor-dir": "Core/Plugins"
   },
