--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,15 @@
   },
   "require": {
     "php": ">=5.6.4",
+    "ext-curl": "*",
+    "ext-mcrypt": "*",
     "guzzlehttp/guzzle": "~6.0",
     "adodb/adodb-php":">=5.20.8",
     "hellogerard/jobby":"^3.2",
     "swiftmailer/swiftmailer": ">=5.4",
     "aura/session": ">=2.1",
-    "twig/twig": ">=1.30"
+    "twig/twig": ">=1.30",
+    "php-curl-class/php-curl-class":">=7.1"
   },
   "require-dev" :{
     "phpunit/phpunit":">=5.7.4"
@@ -33,5 +36,8 @@
     "post-create-project-cmd": [
       "php creator init:app"
     ]
+  },
+  "@TODO":{
+    "php-curl-class":"add to documentation"
   }
 }
